# godml

./: .gitignore  .safety-project.ini  Dockerfile  PyPI-Recovery-Codes-agtzrojas-2025-07-13T03_39_09.066819.txt  README.md  SECURITY.md  _init__.py  godml.yml  notebook_api.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  safety_scan.yml  scorecard.yml
config_service/: loader.py  schema.py
core_service/: engine.py  executors.py  validators.py
examples/data/: churn_sample.csv
examples/titanic/: GODML_Titanic_Tuned_Exec_Notebook.ipynb
godml/: __init__.py  _init__.py  add_example.py  build_doc_index.py  godml.yml  godml_cli.py  godml_doc_index.json  notebook_api.py  profile_stats  recipes_examples.json
godml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
godml/advisor_service/: __init__.py  advisor_orchestrator.py  data_quality_judge.py  doc_rag_advisor.py  hyperparam_advisor.py  llm_advisor.py  metric_judge.py  model_selector.py  rag_advisor.py  schemas.py
godml/cli/: app.py  validators.py
godml/cli/commands/: calc_hash.py  deploy.py  init.py  run.py  serve.py
godml/compliance_service/: base_compliance.py  compliance_registry.py  compliance_utils.py  pci_dss.py  pii_detector.py  validation_helpers.py
godml/config_service/: loader.py  resolver.py  schema.py
godml/core_service/: engine.py  executors.py  parser.py  pipeline_runner.py  preprocessor.py  run_pipeline.py  validators.py
godml/dataprep_service/: cli.py  recipe_executor.py  schema.py
godml/dataprep_service/connectors/: base.py  csv.py  parquet.py  s3.py
godml/dataprep_service/lineage/: openlineage_emitter.py
godml/dataprep_service/transforms/: base.py  cast_types.py  columns.py  dedup.py  encode.py  join.py  missing.py  quality.py  regex_replace.cp311-win_amd64.pyd  regex_replace.cpp  regex_replace.pyx  scale.py  setup.py  text.py  window.py
godml/dataprep_service/validators/: expectations.py  schema_checks.py
godml/deploy_service/: README_DEPLOY.md  app.py  env_config.py  main.py  server.py
godml/deploy_service/.github/workflows/: docker-ci.yml
godml/model_service/: auto_tuner.py  base_model_interface.py  model_loader.py
godml/model_service/model_registry/: linear_regression_model.py  logistic_regression_model.py  lstm_forecast_model.py  model_registry.py  random_forest_model.py  xgboost_model.py
godml/monitoring_service/: logger.py  metric_diagnostics.py  metrics.py
godml/notebook_api/: __init__.py  _core.py  advisor.py  artifacts.py  compliance.py  dataprep.py  pipeline.py  training.py  tuning.py
godml/providers/: mlflow.py  sagemaker.py
godml/providers/sagemaker/: __init__.py  config.py  executor.py  pipeline_builder.py  step_builder.py
godml/providers/sagemaker/scripts/: evaluate.py  preprocess.py  train_sklearn.py  train_xgboost.py
godml/templates/deploy_template/: env_config.py  server.py
godml/utils/: DOCKERFILE_TEMPLATE.txt  README_TEMPLATE.txt  cross_validation.py  hash.py  log_model_generic.py  model_storage.py  path_utils.py  predict_safely.py  yaml_utils.py
model_service/: model_loader.py
model_service/model_registry/: model_registry.py  xgboost_model.py
tests/: conftest.py  dummy_regression_model.py  plot_benchmarks.py  test_base_regression_model.py  test_connector.py  test_dataprep_compliance_gate.py  test_doc_rag.py  test_linear_regression_model.py  test_logistic_regression_model.py  test_logistic_regression_model_cv.py  test_lstm_forecast_model.py  test_model_loader_seguro.py  test_model_registry.py  test_notebook_api.py  test_notebook_api_autotune.py  test_path_utils_security.py  test_pci_dss.py  test_recipe_executor.py
tests/integration/: test_pipeline_config.py
tests/mi_proyecto_test/: README.md  godml.yml
tests/test_compliance/: test_pci_dss.py  test_pii_detector.py
tests/test_serving/: test_inference_api.py  test_server.py
tests/test_training_models/: test_random_forest.py  test_xgboost.py
tests/unit/: test_advisor_components.py  test_compliance_helpers.py  test_compliance_utils.py  test_config_service.py  test_core_service_parser.py  test_metrics.py  test_model_registry.py  test_models.py  test_notebook_api.py  test_notebook_api_extended.py  test_pci_dss.py  test_pii_detector.py  test_utils_misc.py
utils/: log_model_generic.py  model_storage.py  predict_safely.py
