[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.1.1", "wheel"]

[project]
description = "Governed, Observable & Declarative Machine Learning Framework"
license = {text = "MIT"}
name = "godml"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "1.2.2"

authors = [{name = "Arturo Gutierrez Rubio Rojas", email = "agtzrubio@dagmalia.com"}]

maintainers = [
  {name = "Arturo Gutierrez Rubio Rojas", email = "agtzrubio@dagmalia.com"},
]

keywords = [
  "mlops",
  "machine learning",
  "framework",
  "governance",
  "observability",
  "mlflow",
  "sagemaker",
  "dagmalia",
  "supply-chain-security",
  "slsa",
  "cosign",
  "sigstore",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Natural Language :: English",
  "Natural Language :: Spanish",
]

# ─────────────────────────────────────────────────────────
# CORE dependencies (always installed — lightweight)
# pip install godml
# ─────────────────────────────────────────────────────────
dependencies = [
  # CLI & UX
  "typer>=0.12.0,<1",
  "click>=8.1.0,<9",
  "rich>=13.0.0,<16",
  # Config & validation
  "pydantic>=2.11.0,<3",
  "pyyaml>=6.0.0,<7",
  # Data & ML core
  "pandas>=2.0.0,<4",
  "numpy>=1.24.0,<3.0",
  "scikit-learn>=1.5.0,<2",
  "xgboost>=2.0.0,<4",
  # Experiment tracking (lightweight install)
  "mlflow>=2.13.0,<4",
  # Artifacts & serialization
  "joblib>=1.3.0,<2",
  # Network
  "urllib3>=2.0.0,<3",
  # Security
  "protobuf>=4.25.0,<8",
]

[project.scripts]
godml = "godml.godml_cli:main"

[project.urls]
"Documentation" = "https://godmlcore.com"
"Homepage" = "https://godmlcore.com"
"Source" = "https://github.com/DAGMALIA/godml"
"PyPI" = "https://pypi.org/project/godml/"
"SLSA Framework" = "https://slsa.dev/"
"Supply Chain Verified" = "https://search.sigstore.dev/?q=DAGMALIA"

# ─────────────────────────────────────────────────────────
# OPTIONAL extras — install what you need
# ─────────────────────────────────────────────────────────
[project.optional-dependencies]

# pip install godml[api]
# Deploy service (FastAPI microservice)
api = [
  "fastapi>=0.110.0,<1",
  "uvicorn[standard]>=0.29.0,<1",
]

# pip install godml[aws]
# AWS / SageMaker support
aws = [
  "boto3>=1.34.0,<2",
  "sagemaker>=2.200.0,<4",
]

# pip install godml[deep]
# Deep learning (TensorFlow + Keras)
deep = [
  "tensorflow>=2.16.0,<3",
  "keras>=3.0.0,<4",
]

# pip install godml[advisor]
# AI advisor / RAG features (heavy: gpt4all is ~2GB)
advisor = [
  "gpt4all>=2.0.0,<3",
  "lightgbm>=4.0.0,<5",
]

# pip install godml[data]
# Extended data connectors
data = [
  "pyarrow>=15.0.0,<25",
  "pymysql>=1.1.0,<2",
]

# pip install godml[dev]
# Development & testing
dev = [
  "pytest>=8.0.0,<10",
  "pytest-cov>=5.0.0,<8",
  "pytest-mock>=3.14.0,<4",
  "moto[all]>=5.0.0,<6",
  "httpx>=0.27.0,<1",
]

# pip install godml[all]
# Everything (except dev tools)
all = [
  "godml[api]",
  "godml[aws]",
  "godml[deep]",
  "godml[advisor]",
  "godml[data]",
]

[tool.setuptools.package-data]
"godml.utils" = ["README_TEMPLATE.txt", "DOCKERFILE_TEMPLATE.txt"]

[tool.setuptools.packages.find]
exclude = ["tests*", "venv*", "*.egg-info*"]
include = ["godml*"]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:warnings"

[tool.coverage.run]
source = ["godml"]
omit = [
  "*/tests/*",
  "*/examples/*",
  "*/__pycache__/*",
  "*/templates/*",
  # CLI requires subprocess integration tests
  "godml/cli/*",
  "godml/godml_cli.py",
  # Deploy service requires Docker + FastAPI server
  "godml/deploy_service/*",
  # External cloud providers — require live AWS/SageMaker credentials
  "godml/providers/sagemaker/*",
  "godml/providers/sagemaker/scripts/*",
  "godml/dataprep_service/connectors/s3.py",
  # LSTM requires TensorFlow installation + GPU/CPU warmup
  "godml/model_service/model_registry/lstm_forecast_model.py",
  # build_doc_index is a one-shot setup script
  "godml/build_doc_index.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "except ImportError",
]
show_missing = true
fail_under = 54